--- a/StoreSearch/Base.lproj/Main.storyboard
+++ b/StoreSearch/Base.lproj/Main.storyboard
@@ -29,14 +29,38 @@
 </string>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mR8-nF-rl3">
+                                <rect key="frame" x="0.0" y="100" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="usX-wU-vsI">
+                                        <nil key="title"/>
+                                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="HNe-OA-bdQ">
+                                            <rect key="frame" x="57" y="5.5" width="300" height="33"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="All"/>
+                                                <segment title="Music"/>
+                                                <segment title="Software"/>
+                                                <segment title="E-books"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="segmentChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="4iQ-AX-C8u"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="yUk-1F-Jcm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1w5-MF-XyO"/>
+                            <constraint firstItem="mR8-nF-rl3" firstAttribute="top" secondItem="Haz-Ew-fSL" secondAttribute="bottom" id="2Sy-yO-F9h"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="yUk-1F-Jcm" secondAttribute="bottom" id="5fL-gG-UFI"/>
+                            <constraint firstItem="mR8-nF-rl3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="6PE-gu-91W"/>
                             <constraint firstItem="yUk-1F-Jcm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Gey-FR-btD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yUk-1F-Jcm" secondAttribute="trailing" id="eb5-Pg-qPF"/>
                             <constraint firstItem="Haz-Ew-fSL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="j0g-SY-47M"/>
+                            <constraint firstItem="mR8-nF-rl3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="nt4-4p-3f9"/>
                             <constraint firstItem="Haz-Ew-fSL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vxU-gg-WV1"/>
                             <constraint firstItem="Haz-Ew-fSL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="zMI-Gh-xc0"/>
                         </constraints>
@@ -44,6 +68,7 @@
                     </view>
                     <connections>
                         <outlet property="searchBar" destination="Haz-Ew-fSL" id="JCo-dk-yhN"/>
+                        <outlet property="segmentedControl" destination="HNe-OA-bdQ" id="Mqy-NN-Z0a"/>
                         <outlet property="tableView" destination="yUk-1F-Jcm" id="UZP-lG-8gd"/>
                     </connections>
                 </viewController>
