--- a/StoreSearch/Base.lproj/Main.storyboard
+++ b/StoreSearch/Base.lproj/Main.storyboard
@@ -88,8 +88,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QOx-hd-Iiv" userLabel="Pop-up View">
                                 <rect key="frame" x="67" y="281" width="280" height="280"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="42N-Jo-Mgs">
-                                        <rect key="frame" x="20" y="129" width="260" height="32"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="42N-Jo-Mgs">
+                                        <rect key="frame" x="20" y="129.5" width="260" height="31.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -146,10 +146,8 @@
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="TiR-mS-rK9" secondAttribute="bottom" constant="43" id="2hH-WR-NNb"/>
-                                    <constraint firstItem="42N-Jo-Mgs" firstAttribute="top" secondItem="QOx-hd-Iiv" secondAttribute="top" constant="129" id="4r2-eB-Mg0"/>
                                     <constraint firstItem="TiR-mS-rK9" firstAttribute="top" secondItem="nsT-6R-dJU" secondAttribute="bottom" constant="8" id="56i-J3-PSl"/>
                                     <constraint firstItem="2zE-RQ-Dpk" firstAttribute="leading" secondItem="CCB-5x-Mhy" secondAttribute="trailing" constant="63" id="5MC-b1-OMl"/>
-                                    <constraint firstItem="4Vf-5m-NL5" firstAttribute="top" secondItem="2zE-RQ-Dpk" secondAttribute="bottom" constant="48" id="7JK-wk-C2s"/>
                                     <constraint firstItem="nsT-6R-dJU" firstAttribute="top" secondItem="4Vf-5m-NL5" secondAttribute="bottom" constant="3" id="909-lv-fsH"/>
                                     <constraint firstAttribute="trailing" secondItem="42N-Jo-Mgs" secondAttribute="trailing" id="C01-jp-6Pc"/>
                                     <constraint firstAttribute="trailing" secondItem="8MD-Rz-nTd" secondAttribute="trailing" constant="13" id="CLC-SQ-cZl"/>
@@ -157,24 +155,27 @@
                                     <constraint firstItem="4Vf-5m-NL5" firstAttribute="top" secondItem="42N-Jo-Mgs" secondAttribute="bottom" constant="2" id="E7Q-gQ-vNX"/>
                                     <constraint firstItem="TiR-mS-rK9" firstAttribute="leading" secondItem="QOx-hd-Iiv" secondAttribute="leading" constant="20" id="FdR-hG-v73"/>
                                     <constraint firstItem="CCB-5x-Mhy" firstAttribute="top" secondItem="QOx-hd-Iiv" secondAttribute="top" constant="8" id="IB2-DL-Iyu"/>
+                                    <constraint firstItem="TiR-mS-rK9" firstAttribute="top" secondItem="nsT-6R-dJU" secondAttribute="bottom" constant="8" id="Ict-Vq-ZGX"/>
                                     <constraint firstItem="42N-Jo-Mgs" firstAttribute="leading" secondItem="QOx-hd-Iiv" secondAttribute="leading" constant="20" id="LO2-xU-3KJ"/>
                                     <constraint firstItem="4Vf-5m-NL5" firstAttribute="leading" secondItem="QOx-hd-Iiv" secondAttribute="leading" constant="20" id="Lba-Fb-0Fg"/>
+                                    <constraint firstItem="4Vf-5m-NL5" firstAttribute="top" secondItem="42N-Jo-Mgs" secondAttribute="bottom" constant="2" id="MR5-I5-Lre"/>
                                     <constraint firstAttribute="bottom" secondItem="iZe-jO-Snt" secondAttribute="bottom" constant="43" id="O6q-B5-GjD"/>
                                     <constraint firstItem="HWA-cb-gF2" firstAttribute="top" secondItem="4Vf-5m-NL5" secondAttribute="bottom" constant="3" id="OIF-wf-xZ1"/>
+                                    <constraint firstItem="8MD-Rz-nTd" firstAttribute="leading" secondItem="QOx-hd-Iiv" secondAttribute="leading" constant="208" id="QD9-8V-j5n"/>
                                     <constraint firstItem="HWA-cb-gF2" firstAttribute="leading" secondItem="nsT-6R-dJU" secondAttribute="trailing" constant="12" id="QEg-hU-Mav"/>
                                     <constraint firstAttribute="width" constant="280" id="S5V-uf-Omb"/>
                                     <constraint firstItem="HWA-cb-gF2" firstAttribute="leading" secondItem="nsT-6R-dJU" secondAttribute="trailing" constant="12" id="TwM-Kg-2YB"/>
+                                    <constraint firstItem="TiR-mS-rK9" firstAttribute="leading" secondItem="QOx-hd-Iiv" secondAttribute="leading" constant="20" id="XoV-zb-UmM"/>
                                     <constraint firstItem="CCB-5x-Mhy" firstAttribute="leading" secondItem="QOx-hd-Iiv" secondAttribute="leading" constant="12" id="XpV-Ng-xlX"/>
                                     <constraint firstItem="iZe-jO-Snt" firstAttribute="top" secondItem="HWA-cb-gF2" secondAttribute="bottom" constant="8" id="ZCS-Hc-nh7"/>
                                     <constraint firstAttribute="trailing" secondItem="2zE-RQ-Dpk" secondAttribute="trailing" constant="90" id="ZPH-vh-MAa"/>
-                                    <constraint firstItem="8MD-Rz-nTd" firstAttribute="leading" secondItem="iZe-jO-Snt" secondAttribute="trailing" constant="36" id="bbv-V8-avw"/>
-                                    <constraint firstItem="8MD-Rz-nTd" firstAttribute="leading" secondItem="iZe-jO-Snt" secondAttribute="trailing" constant="36" id="d7T-by-bmG"/>
+                                    <constraint firstItem="iZe-jO-Snt" firstAttribute="leading" secondItem="TiR-mS-rK9" secondAttribute="trailing" constant="8" id="bej-ZA-56H"/>
                                     <constraint firstAttribute="bottom" secondItem="8MD-Rz-nTd" secondAttribute="bottom" constant="12" id="dSP-ly-hxb"/>
                                     <constraint firstItem="nsT-6R-dJU" firstAttribute="leading" secondItem="QOx-hd-Iiv" secondAttribute="leading" constant="20" id="gi8-LH-soC"/>
                                     <constraint firstAttribute="trailing" secondItem="HWA-cb-gF2" secondAttribute="trailing" constant="117" id="jGd-TZ-LUK"/>
                                     <constraint firstItem="iZe-jO-Snt" firstAttribute="leading" secondItem="TiR-mS-rK9" secondAttribute="trailing" constant="8" id="oeI-QC-e4p"/>
-                                    <constraint firstItem="42N-Jo-Mgs" firstAttribute="top" secondItem="CCB-5x-Mhy" secondAttribute="bottom" constant="103" id="pIW-SK-0gp"/>
                                     <constraint firstItem="2zE-RQ-Dpk" firstAttribute="centerX" secondItem="QOx-hd-Iiv" secondAttribute="centerX" id="rV6-dZ-vDj"/>
+                                    <constraint firstItem="42N-Jo-Mgs" firstAttribute="top" secondItem="2zE-RQ-Dpk" secondAttribute="bottom" constant="14.5" id="tuq-mu-KFi"/>
                                     <constraint firstItem="2zE-RQ-Dpk" firstAttribute="top" secondItem="QOx-hd-Iiv" secondAttribute="top" constant="15" id="uti-mR-VaQ"/>
                                     <constraint firstAttribute="trailing" secondItem="4Vf-5m-NL5" secondAttribute="trailing" id="vJ7-5d-gHh"/>
                                     <constraint firstItem="2zE-RQ-Dpk" firstAttribute="leading" secondItem="CCB-5x-Mhy" secondAttribute="trailing" constant="63" id="vq8-jL-fgK"/>
